--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/rama982/kernel_xiaomi_chopin
-KERNEL_SOURCE_BRANCH=r
+KERNEL_SOURCE=https://github.com/Xiaomi-Chopin-Device/kernel_xiaomi_chopin
+KERNEL_SOURCE_BRANCH=chopin-r-oss
 KERNEL_TARGET=chopin_user
 BUILD_ARGS:CC=clang LD=ld.lld
