--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/Xiaomi-Chopin-Device/kernel_xiaomi_chopin
-KERNEL_SOURCE_BRANCH=chopin-r-oss
-KERNEL_TARGET=chopin_user
+KERNEL_SOURCE=https://github.com/YuyukoAOSPMod/kernel_xiaomi_chopin
+KERNEL_SOURCE_BRANCH=12.1
+KERNEL_TARGET=axs103
 BUILD_ARGS:CC=clang LD=ld.lld
