--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/wxyahyj/kernel_xiaomi_chopin
-KERNEL_SOURCE_BRANCH=12.1
+KERNEL_SOURCE=https://github.com/wxyahyj/kernel_xiaomi_chopin-r
+KERNEL_SOURCE_BRANCH=master
 KERNEL_TARGET=chopin_user
 BUILD_ARGS:CC=clang LD=ld.lld
