--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -14,6 +14,8 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      
+
       - name: Setup environment
 
         run: |
@@ -30,15 +32,25 @@ jobs:
 
           echo "BUILD_ARGS=$(cat config.env | grep -w "BUILD_ARGS" | head -n 1 | cut -d ":" -f 2)" >> $GITHUB_ENV
 
+      
+
       - name: Pull toolchain
 
         run: |
 
           mkdir clang
 
-          curl https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-4691093.tar.gz -RLO
+          cd clang
 
-          tar -C clang/ -xf clang-*.tar.gz
+          curl -LJO https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-4691093.tar.gz
+
+          file clang-4691093.tar.gz  # 检查文件是否为 gzip 格式
+
+          tar xf clang-4691093.tar.gz
+
+          cd ..
+
+      
 
       - name: Pull kernel source
 
@@ -47,6 +59,8 @@ jobs:
           git clone --depth=1 ${{ env.KERNEL_SOURCE }} -b ${{ env.KERNEL_SOURCE_BRANCH }} kernel-source
 
           echo "KERNEL_VERSION="$(cat kernel-source/arch/arm64/configs/${{ env.KERNEL_TARGET }}_defconfig | grep "CONFIG_LOCALVERSION\=" | sed -r 's/.*"(.+)".*/\1/' | sed 's/^.//')"" >> $GITHUB_ENV
+
+      
 
       - name: Build kernel
 
@@ -57,6 +71,8 @@ jobs:
           export KBUILD_BUILD_HOST="workspace"
 
           export PATH=$GITHUB_WORKSPACE/clang/bin:${PATH}
+
+          
 
           args="                  ARCH=arm64 \
 
@@ -72,6 +88,8 @@ jobs:
 
                                   CROSS_COMPILE_ARM32=$GITHUB_WORKSPACE/arm-linux-androideabi-4.9/bin/arm-linux-androideabi- "
 
+          
+
           cd kernel-source
 
           
@@ -84,11 +102,15 @@ jobs:
 
           make -j$(($(getconf _NPROCESSORS_ONLN) * 2)) ${args}
 
+      
+
       - name: Package kernel
 
         run: |
 
           git clone --depth=1 ${{ env.ANYKERNEL_SOURCE }} -b ${{ env.ANYKERNEL_SOURCE_BRANCH }} AnyKernel3 && rm -rf AnyKernel3/.git AnyKernel3/.github AnyKernel3/LICENSE AnyKernel3/README.md
+
+          
 
           if [[ -f out/arch/arm64/boot/Image.gz-dtb ]]; then
 
@@ -108,19 +130,17 @@ jobs:
 
           fi
 
+          
+
           if [ -f out/arch/arm64/boot/dtbo.img ]; then
 
             cp out/arch/arm64/boot/dtbo.img AnyKernel3/dtbo.img
 
           fi
 
+      
+
       - name: Upload kernel to artifact
 
         uses: actions/upload-artifact@v3
-
-        with:
-
-          name: ${{ env.KERNEL_VERSION }}_${{ env.KERNEL_TARGET }}
-
-          path: AnyKernel3/*
 
