--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -14,8 +14,6 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      
-
       - name: Setup environment
 
         run: |
@@ -32,25 +30,11 @@ jobs:
 
           echo "BUILD_ARGS=$(cat config.env | grep -w "BUILD_ARGS" | head -n 1 | cut -d ":" -f 2)" >> $GITHUB_ENV
 
-      
-
       - name: Pull toolchain
 
         run: |
 
-          mkdir clang
-
-          cd clang
-
-          curl -LJO https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master/clang-4691093.tar.gz
-
-          file clang-4691093.tar.gz  # 检查文件是否为 gzip 格式
-
-          tar xf clang-4691093.tar.gz
-
-          cd ..
-
-      
+          mkdir clang && curl https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android12-release/clang-r416183b1.tar.gz -RLO && tar -C clang/ -xzf clang-*.tar.gz
 
       - name: Pull kernel source
 
@@ -59,8 +43,6 @@ jobs:
           git clone --depth=1 ${{ env.KERNEL_SOURCE }} -b ${{ env.KERNEL_SOURCE_BRANCH }} kernel-source
 
           echo "KERNEL_VERSION="$(cat kernel-source/arch/arm64/configs/${{ env.KERNEL_TARGET }}_defconfig | grep "CONFIG_LOCALVERSION\=" | sed -r 's/.*"(.+)".*/\1/' | sed 's/^.//')"" >> $GITHUB_ENV
-
-      
 
       - name: Build kernel
 
@@ -72,37 +54,21 @@ jobs:
 
           export PATH=$GITHUB_WORKSPACE/clang/bin:${PATH}
 
-          
-
           args="                  ARCH=arm64 \
 
                                   O=../out \
 
                                   ${{ env.BUILD_ARGS }} \
 
-                                  CC=clang \
-
-                                  CLANG_TRIPLE=aarch64-linux-gnu- \
-
-                                  CROSS_COMPILE=$GITHUB_WORKSPACE/aarch64-linux-android-4.9/bin/aarch64-linux-android- \
-
-                                  CROSS_COMPILE_ARM32=$GITHUB_WORKSPACE/arm-linux-androideabi-4.9/bin/arm-linux-androideabi- "
-
-          
+                                  CROSS_COMPILE=$GITHUB_WORKSPACE/aarch64-linux-android-4.9/bin/aarch64-linux-android- "
 
           cd kernel-source
 
-          
-
           curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
-
-          
 
           make ${args} ${{ env.KERNEL_TARGET }}_defconfig
 
           make -j$(($(getconf _NPROCESSORS_ONLN) * 2)) ${args}
-
-      
 
       - name: Package kernel
 
@@ -110,27 +76,17 @@ jobs:
 
           git clone --depth=1 ${{ env.ANYKERNEL_SOURCE }} -b ${{ env.ANYKERNEL_SOURCE_BRANCH }} AnyKernel3 && rm -rf AnyKernel3/.git AnyKernel3/.github AnyKernel3/LICENSE AnyKernel3/README.md
 
-          
+          if [[ -f out/arch/arm64/boot/Image ]]; then
 
-          if [[ -f out/arch/arm64/boot/Image.gz-dtb ]]; then
+            gzip out/arch/arm64/boot/Image
 
-            cp out/arch/arm64/boot/Image.gz-dtb AnyKernel3/Image.gz-dtb
-
-          elif [[ -f out/arch/arm64/boot/Image-dtb ]]; then
-
-            cp out/arch/arm64/boot/Image-dtb AnyKernel3/Image-dtb
+            cp out/arch/arm64/boot/Image.gz AnyKernel3/Image.gz
 
           elif [[ -f out/arch/arm64/boot/Image.gz ]]; then
 
             cp out/arch/arm64/boot/Image.gz AnyKernel3/Image.gz
 
-          elif [[ -f out/arch/arm64/boot/Image ]]; then
-
-            cp out/arch/arm64/boot/Image AnyKernel3/Image
-
           fi
-
-          
 
           if [ -f out/arch/arm64/boot/dtbo.img ]; then
 
@@ -138,9 +94,13 @@ jobs:
 
           fi
 
-      
-
       - name: Upload kernel to artifact
 
         uses: actions/upload-artifact@v3
+
+        with:
+
+          name: ${{ env.KERNEL_VERSION }}_${{ env.KERNEL_TARGET }}
+
+          path: AnyKernel3/*
 
