--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -1,74 +1,56 @@
-name: Build MikaKernel
+name: My Build Workflow
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ]
+
+env:
+  ANYKERNEL_SOURCE: https://github.com/wxyahyj/AnyKernel3
+  ANYKERNEL_SOURCE_BRANCH: master
+  KERNEL_SOURCE: https://github.com/wxyahyj/Xiaomi_Kernel_chopin
+  KERNEL_SOURCE_BRANCH: chopin-R-OSS
+  KERNEL_TARGET: chopin_user
+  BUILD_ARGS: CC=clang LD=ld.lld
 
 jobs:
-
-  build-kernel:
-
+  build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        crosstool-ng-version: [1.24.0]
     steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2
 
-      - uses: actions/checkout@v2
+    - name: Install dependencies
+      run: |
+        sudo apt-get update && sudo apt-get install -y \
+          bison flex gperf libncurses5-dev libssl-dev \
+          help2man #<- Add this line to install help2man tool
 
-      - name: Setup environment
-        run: |
-          echo "ANYKERNEL_SOURCE=$(cat config.env | grep -w "ANYKERNEL_SOURCE" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
-          echo "ANYKERNEL_SOURCE_BRANCH=$(cat config.env | grep -w "ANYKERNEL_SOURCE_BRANCH" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
-          echo "KERNEL_SOURCE=$(cat config.env | grep -w "KERNEL_SOURCE" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
-          echo "KERNEL_SOURCE_BRANCH=$(cat config.env | grep -w "KERNEL_SOURCE_BRANCH" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
-          echo "KERNEL_TARGET=$(cat config.env | grep -w "KERNEL_TARGET" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
-          echo "BUILD_ARGS=$(cat config.env | grep -w "BUILD_ARGS" | head -n 1 | cut -d ":" -f 2)" >> $GITHUB_ENV
+    - name: Build and install crosstool-ng
+      working-directory: ./crosstool-ng
+      run: |
+        git checkout tags/crosstool-ng-${{ matrix.crosstool-ng-version }}
+        ./bootstrap && ./configure --prefix=$PWD/install && make -j$(nproc) && make install
+        export PATH=$PWD/install/bin:${PATH}
 
-      - name: Pull toolchain
-        run: |
-          git clone --depth=1 https://github.com/crosstool-ng/crosstool-ng.git
-          cd crosstool-ng
-          ./bootstrap
-          ./configure --prefix=$PWD/install
-          make -j$(($(nproc) * 2))
-          make install
-          export PATH=$PWD/install/bin:${PATH}
-          ct-ng aarch64-linux-gnu
-          ct-ng build
+    - name: Build kernel
+      run: |
+        # Clone AnyKernel3 repository
+        git clone --depth=1 ${{ env.ANYKERNEL_SOURCE }} --branch ${{ env.ANYKERNEL_SOURCE_BRANCH }} anykernel3
 
-      - name: Pull kernel source
-        run: |
-          git clone --depth=1 ${{ env.KERNEL_SOURCE }} -b ${{ env.KERNEL_SOURCE_BRANCH }} kernel-source
-          echo "KERNEL_VERSION="$(cat kernel-source/arch/arm64/configs/${{ env.KERNEL_TARGET }}_defconfig | grep "CONFIG_LOCALVERSION\=" | sed -r 's/.*"(.+)".*/\1/' | sed 's/^.//')"" >> $GITHUB_ENV
+        # Clone kernel source code
+        git clone --depth=1 ${{ env.KERNEL_SOURCE }} --branch ${{ env.KERNEL_SOURCE_BRANCH }} kernel
 
-      - name: Build kernel
-        run: |
-          args="                  ARCH=arm64 \
-                                  O=../out \
-                                  ${{ env.BUILD_ARGS }} \
-                                  CROSS_COMPILE=aarch64-linux-gnu- \
-                                  CROSS_COMPILE_ARM32=arm-linux-gnueabi- "
-          cd kernel-source
-          curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
-          make ${args} ${{ env.KERNEL_TARGET }}_defconfig
-          make -j$(($(getconf _NPROCESSORS_ONLN) * 2)) ${args}
+        # Build kernel
+        cd kernel
+        make O=out ARCH=arm64 SUBARCH=arm64 ${KERNEL_TARGET}_defconfig
+        make O=out $BUILD_ARGS ARCH=arm64 SUBARCH=arm64 -j$(nproc)
 
-      - name: Package kernel
-        run: |
-          git clone --depth=1 ${{ env.ANYKERNEL_SOURCE }} -b ${{ env.ANYKERNEL_SOURCE_BRANCH }} AnyKernel3 && rm -rf AnyKernel3/.git AnyKernel3/.github AnyKernel3/LICENSE AnyKernel3/README.md
-          if [[ -f out/arch/arm64/boot/Image.gz-dtb ]]; then
-            cp out/arch/arm64/boot/Image.gz-dtb AnyKernel3/Image.gz-dtb
-          elif [[ -f out/arch/arm64/boot/Image-dtb ]]; then
-            cp out/arch/arm64/boot/Image-dtb AnyKernel3/Image-dtb
-          elif [[ -f out/arch/arm64/boot/Image.gz ]]; then
-            cp out/arch/arm64/boot/Image.gz AnyKernel3/Image.gz
-          elif [[ -f out/arch/arm64/boot/Image ]]; then
-            cp out/arch/arm64/boot/Image AnyKernel3/Image
-          fi
-          if [ -f out/arch/arm64/boot/dtbo.img ]; then
-            cp out/arch/arm64/boot/dtbo.img AnyKernel3/dtbo.img
-          fi
-
-      - name: Upload kernel to artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.KERNEL_VERSION }}_${{ env.KERNEL_TARGET }}
-          path: AnyKernel3
+    - name: Create flashable zip
+      run: |
+        cd kernel
+        cp arch/arm64/boot/Image.gz-dtb ../anykernel3/
+        cd ../anykernel3/
+        zip -r9q kernel.zip ./*
