--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -1,56 +1,123 @@
-name: My Build Workflow
+name: Build MikaKernel
 
 on:
-  push:
-    branches: [ main ]
 
-env:
-  ANYKERNEL_SOURCE: https://github.com/wxyahyj/AnyKernel3
-  ANYKERNEL_SOURCE_BRANCH: master
-  KERNEL_SOURCE: https://github.com/wxyahyj/Xiaomi_Kernel_chopin
-  KERNEL_SOURCE_BRANCH: chopin-R-OSS
-  KERNEL_TARGET: chopin_user
-  BUILD_ARGS: CC=clang LD=ld.lld
+  workflow_dispatch:
 
 jobs:
-  build:
+
+  build-kernel:
+
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        crosstool-ng-version: [1.24.0]
+
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update && sudo apt-get install -y \
-          bison flex gperf libncurses5-dev libssl-dev \
-          help2man #<- Add this line to install help2man tool
+      - uses: actions/checkout@v3
 
-    - name: Build and install crosstool-ng
-      working-directory: ./crosstool-ng
-      run: |
-        git checkout tags/crosstool-ng-${{ matrix.crosstool-ng-version }}
-        ./bootstrap && ./configure --prefix=$PWD/install && make -j$(nproc) && make install
-        export PATH=$PWD/install/bin:${PATH}
+      - name: Setup environment
 
-    - name: Build kernel
-      run: |
-        # Clone AnyKernel3 repository
-        git clone --depth=1 ${{ env.ANYKERNEL_SOURCE }} --branch ${{ env.ANYKERNEL_SOURCE_BRANCH }} anykernel3
+        run: |
 
-        # Clone kernel source code
-        git clone --depth=1 ${{ env.KERNEL_SOURCE }} --branch ${{ env.KERNEL_SOURCE_BRANCH }} kernel
+          echo "ANYKERNEL_SOURCE=$(cat config.env | grep -w "ANYKERNEL_SOURCE" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
 
-        # Build kernel
-        cd kernel
-        make O=out ARCH=arm64 SUBARCH=arm64 ${KERNEL_TARGET}_defconfig
-        make O=out $BUILD_ARGS ARCH=arm64 SUBARCH=arm64 -j$(nproc)
+          echo "ANYKERNEL_SOURCE_BRANCH=$(cat config.env | grep -w "ANYKERNEL_SOURCE_BRANCH" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
 
-    - name: Create flashable zip
-      run: |
-        cd kernel
-        cp arch/arm64/boot/Image.gz-dtb ../anykernel3/
-        cd ../anykernel3/
-        zip -r9q kernel.zip ./*
+          echo "KERNEL_SOURCE=$(cat config.env | grep -w "KERNEL_SOURCE" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
+
+          echo "KERNEL_SOURCE_BRANCH=$(cat config.env | grep -w "KERNEL_SOURCE_BRANCH" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
+
+          echo "KERNEL_TARGET=$(cat config.env | grep -w "KERNEL_TARGET" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
+
+          echo "BUILD_ARGS=$(cat config.env | grep -w "BUILD_ARGS" | head -n 1 | cut -d ":" -f 2)" >> $GITHUB_ENV
+
+      - name: Pull toolchain
+
+        run: |
+
+          git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9 aarch64-linux-android-4.9
+
+          git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9 arm-linux-androideabi-4.9
+
+          mkdir clang && curl https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android12-release/clang-r416183b1.tar.gz -RLO && tar -C clang/ -xf clang-*.tar.gz
+
+      - name: Pull kernel source
+
+        run: |
+
+          git clone --depth=1 ${{ env.KERNEL_SOURCE }} -b ${{ env.KERNEL_SOURCE_BRANCH }} kernel-source
+
+          echo "KERNEL_VERSION="$(cat kernel-source/arch/arm64/configs/${{ env.KERNEL_TARGET }}_defconfig | grep "CONFIG_LOCALVERSION\=" | sed -r 's/.*"(.+)".*/\1/' | sed 's/^.//')"" >> $GITHUB_ENV
+
+      - name: Build kernel
+
+        run: |
+
+          export KBUILD_BUILD_USER="zclkkk"
+
+          export KBUILD_BUILD_HOST="workspace"
+
+          export PATH=$GITHUB_WORKSPACE/clang/bin:${PATH}
+
+          args="                  ARCH=arm64 \
+
+                                  O=../out \
+
+                                  ${{ env.BUILD_ARGS }} \
+
+                                  CLANG_TRIPLE=aarch64-linux-gnu- \
+
+                                  CROSS_COMPILE=$GITHUB_WORKSPACE/aarch64-linux-android-4.9/bin/aarch64-linux-android- \
+
+                                  CROSS_COMPILE_ARM32=$GITHUB_WORKSPACE/arm-linux-androideabi-4.9/bin/arm-linux-androideabi- "
+
+          cd kernel-source
+
+          
+
+          curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
+
+          
+
+          make ${args} ${{ env.KERNEL_TARGET }}_defconfig
+
+          make -j$(($(getconf _NPROCESSORS_ONLN) * 2)) ${args}
+
+      - name: Package kernel
+
+        run: |
+
+          git clone --depth=1 ${{ env.ANYKERNEL_SOURCE }} -b ${{ env.ANYKERNEL_SOURCE_BRANCH }} AnyKernel3 && rm -rf AnyKernel3/.git AnyKernel3/.github AnyKernel3/LICENSE AnyKernel3/README.md
+
+          if [[ -f out/arch/arm64/boot/Image.gz-dtb ]]; then
+
+            cp out/arch/arm64/boot/Image.gz-dtb AnyKernel3/Image.gz-dtb
+
+          elif [[ -f out/arch/arm64/boot/Image-dtb ]]; then
+
+            cp out/arch/arm64/boot/Image-dtb AnyKernel3/Image-dtb
+
+          elif [[ -f out/arch/arm64/boot/Image.gz ]]; then
+
+            cp out/arch/arm64/boot/Image.gz AnyKernel3/Image.gz
+
+          elif [[ -f out/arch/arm64/boot/Image ]]; then
+
+            cp out/arch/arm64/boot/Image AnyKernel3/Image
+
+          fi
+
+          if [ -f out/arch/arm64/boot/dtbo.img ]; then
+
+            cp out/arch/arm64/boot/dtbo.img AnyKernel3/dtbo.img
+
+          fi
+
+      - name: Upload kernel to artifact
+
+        uses: actions/upload-artifact@v3
+
+        with:
+
+          name: ${{ env.KERNEL_VERSION }}_${{ env.KERNEL_TARGET }}
+
+          path: AnyKernel3
