--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/wxyahyj/kernel_google_pixel3xl
-KERNEL_SOURCE_BRANCH=12.1
-KERNEL_TARGET=crosshatch_defconfig
+KERNEL_SOURCE=https://github.com/wxyahyj/android_kernel_google_crosshatch
+KERNEL_SOURCE_BRANCH=lineage-17.0
+KERNEL_TARGET=sdm845_defconfig
 BUILD_ARGS:CC=clang LD=ld.lld
