--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@ ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/wxyahyj/android_kernel_google_crosshatch
 KERNEL_SOURCE_BRANCH=lineage-17.0
-KERNEL_TARGET=sdm845_defconfig
+KERNEL_TARGET=sdm845
 BUILD_ARGS:CC=clang LD=ld.lld
