--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/wxyahyj/android_kernel_google_crosshatch
-KERNEL_SOURCE_BRANCH=lineage-17.0
-KERNEL_TARGET=sdm845
+KERNEL_SOURCE=https://github.com/wxyahyj/Xiaomi_Kernel_chopin
+KERNEL_SOURCE_BRANCH=cezanne-r-oss
+KERNEL_TARGET=cezanne_user
 BUILD_ARGS:CC=clang LD=ld.lld
