--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/wxyahyj/Xiaomi_Kernel_chopin
-KERNEL_SOURCE_BRANCH=cezanne-r-oss
-KERNEL_TARGET=cezanne_user
+KERNEL_SOURCE_BRANCH=12.1
+KERNEL_TARGET=chopin_user
 BUILD_ARGS:CC=clang LD=ld.lld
