--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/wxyahyj/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/wxyahyj/kernel_xiaomi_chopin
-KERNEL_SOURCE_BRANCH=12.1
-KERNEL_TARGET=chopin_user
+KERNEL_SOURCE=https://github.com/wxyahyj/android_kernel_xiaomi_ares_s
+KERNEL_SOURCE_BRANCH=alps-s
+KERNEL_TARGET=ares_user
 BUILD_ARGS:CC=clang LD=ld.lld
